# lm-data-publisher-kafka_msk_pipeline

./: .env.example  .gitignore  Makefile  README.md  architecture.drawio  cdk.json  jest.config.js  jest.setup.js  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
cdk.out/: LMDataPublisherBaseStack.assets.json  LMDataPublisherBaseStack.template.json  LMDataPublisherDeliveryStack.assets.json  LMDataPublisherDeliveryStack.template.json  LMDataPublisherStorageStack.assets.json  LMDataPublisherStorageStack.template.json  manifest.json  tree.json
docs/: kafka_ingest_spec.md  plan.md  todo.md
infra/lib/: alarms-stack.test.ts  alarms-stack.ts  auth-stack.test.ts  auth-stack.ts  base-stack.test.ts  base-stack.ts  cfn-pipe-test.test.ts  delivery-stack.test.ts  delivery-stack.ts  nag-suppressions.ts  nag-test-helper.ts  network-stack.test.ts  network-stack.ts  pipe-stack.test.ts  pipe-stack.ts  snowflake-auth-stack.test.ts  snowflake-auth-stack.ts  snowflake-setup-stack.test.ts  snowflake-setup-stack.ts  storage-stack.test.ts  storage-stack.ts
lambda/: __init__.py  flatten.py  handler.py  spec_loader.py
lambda/snowflake_setup/: __init__.py  handler.py  requirements.txt
tests/: __init__.py  test_flatten.py  test_handler_contract.py  test_placeholder.py  test_snowflake_setup.py  test_spec_loader.py
tests/fixtures/otlp/: otlp_bundle_ok.json  row_event_missing_required.json  row_event_ok.json
tools/: kafka_publish.py  verify_snowflake.py
